--- a/slide3.html
+++ b/slide3.html
@@ -68,9 +68,9 @@
 
   <!-- Photo 1 -->
   <div class="photo-float" style="animation-delay: 0s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic1.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic1')">
       <div class="absolute -inset-2 bg-gradient-to-r from-pink-400 to-red-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic1.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic1" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
