--- a/slide2.html
+++ b/slide2.html
@@ -184,7 +184,7 @@
             <div class="mt-6 flex justify-center w-full">
               <div class="bg-white/90 rounded-2xl p-6 shadow-xl backdrop-blur-sm w-full max-w-md">
                 <audio id="backgroundMusic" controls loop preload="auto" class="w-full">
-                  <source src="Valentines-Day/The 1975 - About You (Official).mp3" type="audio/mp3">
+                  <source src="main/The 1975-About You (Official).mp3" type="audio/mp3">
                   Your browser does not support the audio element.
                 </audio>
                 <p class="text-s text-gray-500 text-center mt-2">About You The 1975 🎵</p>
