--- a/slide3.html
+++ b/slide3.html
@@ -68,9 +68,9 @@
 
   <!-- Photo 1 -->
   <div class="photo-float" style="animation-delay: 0s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day\Pics\Pic1.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic1.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-pink-400 to-red-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="Valentines-Day\Pics\Pic1.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic1.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
@@ -84,81 +84,81 @@
 
   <!-- Photo 3 -->
   <div class="photo-float" style="animation-delay: 0.4s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic3.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic3.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-orange-400 to-pink-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic3.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic3.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 4 -->
   <div class="photo-float" style="animation-delay: 0.6s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic1.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic4.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-red-400 to-orange-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic4.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic4.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 5 -->
   <div class="photo-float" style="animation-delay: 0.8s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic5.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic5.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-blue-400 to-purple-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic5.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic5.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 6 -->
   <div class="photo-float" style="animation-delay: 1s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic6.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic6.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-pink-400 to-rose-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic6.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic6.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 7 -->
   <div class="photo-float" style="animation-delay: 1.2s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic7.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic7.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-yellow-400 to-orange-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic7.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic7.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 8 -->
   <div class="photo-float" style="animation-delay: 1.4s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic8.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic8.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-cyan-400 to-blue-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic8.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic8.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 9 -->
   <div class="photo-float" style="animation-delay: 1.6s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic9.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic9.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-pink-400 to-fuchsia-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic9.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic9.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 10 -->
   <div class="photo-float" style="animation-delay: 1.8s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic10.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic10.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-rose-400 to-pink-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic10.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic10.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 11 -->
   <div class="photo-float" style="animation-delay: 2s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic11.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic11.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-purple-400 to-pink-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic11.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic11.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
   <!-- Photo 12 -->
   <div class="photo-float" style="animation-delay: 2.2s;">
-    <div class="relative group cursor-pointer" onclick="openLightbox('../Main/../Pics/Pic12.jpg')">
+    <div class="relative group cursor-pointer" onclick="openLightbox('Valentines-Day/Pics/Pic12.jpg')">
       <div class="absolute -inset-2 bg-gradient-to-r from-pink-400 to-red-400 rounded-xl opacity-75 blur group-hover:opacity-100 transition duration-300"></div>
-      <img src="../Main/../Pics/Pic12.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
+      <img src="Valentines-Day/Pics/Pic12.jpg" class="relative rounded-xl shadow-2xl w-full h-64 object-cover border-4 border-white transform group-hover:scale-105 transition duration-300" loading="lazy">
     </div>
   </div>
 
