--- a/slide2.html
+++ b/slide2.html
@@ -173,11 +173,10 @@
             Hello! My Valentine 💓<span class="text-5xl md:text-6xl block mt-4"></span>
           </h2>
           <p class="text-gray-700 text-lg md:text-xl leading-relaxed font-medium max-w-3xl mx-auto mb-8" style="font-family: 'Poppins', sans-serif;">
-            I just want you to know na mahal na mahal kita, I know sometimes di tayo
-            nagkakainindihan may away at tampohan but despite of all that nandito parin tayo lagi nating pinipili
-            ang isa't isa. I always pray to god na e keep safe ka niya always and fast healing yang niraramdam mo ngayon.
-            Thank you so much sa gift na binigay mo, for loving me despite the distance, and for making me feel so special. <br>
-            I love you more and more each day my Angela 💕.
+            Happy Valentines Day Mahal!, Pasensya na ito lang ang kaya ko sa ngayon pero sana ma appriciate mo,
+            gusto ko lang sabihin na Mahal na Mahal kita ng sobra kahit na nandito na tayo sa phase na lagi nalang
+            nag aaway, Gusto ko din sabihin na super duper ganda mo!, Masipag, Mabait ay syempre madaling ma inis,
+            i love you hihintayin kita sa April my Angela 💕.
           </p>
           
             <!-- Audio below the card -->
