--- a/slide4.html
+++ b/slide4.html
@@ -187,7 +187,7 @@
                 <video controls loop muted autoplay playsinline
                     class="w-full rounded-lg shadow-md"
                     style="max-height: 250px;">
-                    <source src="../Main/../Pics/Timelapse.mp4" type="video/mp4">
+                    <source src="Valentines-Day/Pics/Timelapse.mp4" type="video/mp4">
                 </video>
                 </div>
             </div>
@@ -196,7 +196,7 @@
             <div class="mt-6 flex justify-center w-full">
               <div class="w-full max-w-md">
                 <audio id="backgroundMusic" controls loop preload="auto" class="w-full">
-                  <source src="../Main/../Pics/kalapastangan.mp3" type="audio/mp3">
+                  <source src="Valentines-Day/Pics/kalapastangan.mp3" type="audio/mp3">
                   Your browser does not support the audio element.
                 </audio>
                 <p class="text-s text-gray-500 text-center mt-2">Kalapastangan - fitterkarma 🎵</p>
