--- a/slide2.html
+++ b/slide2.html
@@ -176,7 +176,7 @@
             Happy Valentines Day Mahal!, Pasensya na ito lang ang kaya ko sa ngayon pero sana ma appriciate mo,
             gusto ko lang sabihin na Mahal na Mahal kita ng sobra kahit na nandito na tayo sa phase na lagi nalang
             nag aaway, Gusto ko din sabihin na super duper ganda mo!, Masipag, Mabait ay syempre madaling ma inis,
-            i love you hihintayin kita sa April my Angela 💕.
+            i love you kahit malayo tayo sa isa't isa, hihintayin kita sa April Mahal! 💕.
           </p>
           
             <!-- Audio below the card -->
