--- a/slide4.html
+++ b/slide4.html
@@ -184,7 +184,7 @@
                 <h3 class="text-sm font-semibold text-gray-700 text-center mb-3">
                     Micaella Angela Aseo 💖
                 </h3>
-                <video controls loop muted autoplay playsinline
+                <video id="timelapseVideo" controls loop muted autoplay playsinline
                     class="w-full rounded-lg shadow-md"
                     style="max-height: 250px;">
                     <source src="Valentines-Day/Pics/Timelapse.mp4" type="video/mp4">
@@ -242,6 +242,30 @@
         setTimeout(createHeart, i * 200);
     }
     }
+
+    function createHeart() {
+    const heart = document.createElement("div");
+    heart.classList.add("heart-rain");
+
+    heart.innerText = "💖";
+
+    // Random horizontal position
+    heart.style.left = Math.random() * 100 + "vw";
+
+    // Random animation duration
+    heart.style.animationDuration = (3 + Math.random() * 3) + "s";
+
+    // Random size
+    heart.style.fontSize = (15 + Math.random() * 25) + "px";
+
+    document.body.appendChild(heart);
+
+    // Remove heart after animation ends
+    setTimeout(() => {
+      heart.remove();
+    }, 6000);
+  }
+
 
          // Try to autoplay audio and video when page loads (with user interaction)
         document.addEventListener('DOMContentLoaded', function() {
