--- a/slide2.html
+++ b/slide2.html
@@ -192,23 +192,23 @@
 
         <p class="text-white text-lg md:text-xl leading-relaxed font-medium max-w-3xl mx-auto mb-8" style="font-family: 'Poppins', sans-serif;">
           Happy Valentines Day Mahal, Pasensya na ito lang ang kaya ko sa ngayon pero sana ma appriciate mo,
-          gusto ko lang sabihin na Mahal na Mahal kita ng sobra kahit na nandito na tayo sa phase na lagi
-          nalang nag aaway, Gusto ko din sabihin na you are the prettiest girl on earth, Swerte ko no may
-          future wife ako na Masipag, Mabait, Strong Independent Woemen AHAHA at syempre maldita din. 
+          gusto ko lang sabihin na Mahal na Mahal kita kahit na nandito na tayo sa phase na lagi nalang tayo
+          nag aaway, Gusto ko din sabihin na sobrang na appriciate kita i really do, Swerte ko may
+          future wife ako na Masipag, Mabait, Strong Independent Women AHAHA at syempre maldita din. 
           I love you kahit malayo tayo sa isa't isa, hihintayin kita sa April Mahal! 💕.
         </p>
 
         <p class="text-white text-lg md:text-xl leading-relaxed font-medium max-w-3xl mx-auto mb-8" style="font-family: 'Poppins', sans-serif;">
           Sorry sa behavior ko minsan mahal minsan kasi di ko ma control yung emotions ko and hindi ko mapigilan
           mag overthink, Mapansin ko lang na may slight changes the way ka mag reply or sa tono ng boses mo nag
-          iisip agad ako ng kung ano ano, pero i try my best naman na controlin yun kasi alam ko naman na
-          ginagawa mo din kung ano ang dapat at nakakabuti sa relasyon natin lalo na pag nagiging vulnerable
-          ka sakin 🥺. Gustong gusto ko yun pag sweet ka sakin lalo na yung nagsama tayo 🥺, Promise ko sayo
-          pag kaya ko na kukunin kita diyan at magsama na tayo.
+          iisip agad ako ng kung ano ano, pero alam mo na tinatry ko yung best naman na controlin yun kasi alam
+          ko naman na ginagawa mo din kung ano ang dapat at nakakabuti sa relasyon natin lalo na pag nagiging
+          vulnerable ka sakin 🥺. Gustong gusto ko yun pag sweet ka sakin lalo na nung nagsama tayo 🥺, Promise
+          ko sayo pag kaya ko na kukunin kita diyan at magsama na tayo.
         </p>
 
         <p class="text-white text-lg md:text-xl leading-relaxed font-medium max-w-3xl mx-auto mb-8" style="font-family: 'Poppins', sans-serif;">
-          I always praying na ingatan ka lagi ni lord at fast recovery sa illness mo, don't worry mahal tanggap
+          I always praying na ingatan ka lagi ni lord at fast recovery sa buhok mo, don't worry mahal tanggap
           kita ng buo ikaw parin naman yan eh gaya ng lagi kong sinasabi sayo walang problema sakin yan pero i
           know sa side mo may impact parin yan, but don't worry gagaling din yan mahal trust the process lang 🤍.
           I love you 😚
