--- a/slide1.html
+++ b/slide1.html
@@ -57,9 +57,7 @@
     <div class="text-center space-y-10">
       <div class="w-full max-w-6xl mx-auto">
         <h2 class="text-5xl md:text-6xl font-bold text-center mb-12 text-white bg-clip-text bg-gradient-to-r from-pink-600 via-red-500 to-orange-500" style="font-family: 'Lobster', cursive;">
-          Dahil nag YES ka<br>
-          <br>
-          Tap Tap !!!
+          It's a YES
         </h2>
 
         <div class="flex flex-col md:flex-row items-center justify-center gap-10">
