--- a/slide2.html
+++ b/slide2.html
@@ -191,7 +191,7 @@
         </h2>
 
         <p class="text-white text-lg md:text-xl leading-relaxed font-medium max-w-3xl mx-auto mb-8" style="font-family: 'Poppins', sans-serif;">
-          Happy Valentines Day Mahal, Pasensya na ito lang ang kaya ko sa ngayon pero sana ma appriciate mo,
+          Happy Valentines Day Mahal, Pasensya na ito lang ang kaya ko sa ngayon pero sana ma appreciate mo,
           gusto ko lang sabihin na Mahal na Mahal kita kahit na nandito na tayo sa phase na lagi nalang tayo
           nag aaway, Gusto ko din sabihin na sobrang na appreciate kita i really do, Ang Swerte ko may
           future wife ako na Masipag, Mabait, Strong Independent Women AHAHA at syempre maldita din. 
